improve source file directory and add MouseDrag test

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,12 +2,13 @@ project(nodevmap)
 
 include_directories("./")
 
-set(nodevmap_SOURCES	
-    win_main.cpp
-    base_message.cpp
-    base_element.cpp
-    win_message.cpp
+set(nodevmap_SOURCES
+    base/base_message.cpp
+    base/base_element.cpp
+    port-win/win_main.cpp
+    port-win/win_message.cpp
     )
 
-add_executable(nodevmap WIN32
+add_executable(TEST_01 WIN32
+    TEST_01.cpp
     ${nodevmap_SOURCES})
