porting work on osx first commit

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -8,15 +8,50 @@ set(nodevmap_SOURCES
     base/elem_storage.cpp
     base/nvp_layout.cpp
     draw/nvp_draw.cpp
+    )
+
+################################################################################
+
+set(nodevmap_WIN_SOURCES
     port-win/win_main.cpp
     port-win/win_message.cpp
     port-win/direct2d/d2d_main.cpp
     )
 
-add_executable(TEST_d2d WIN32
-    TEST_d2d.cpp
-    ${nodevmap_SOURCES})
+if(WIN32)
+    add_executable(TEST_d2d WIN32
+        TEST_d2d.cpp
+        ${nodevmap_SOURCES}
+        ${nodevmap_WIN_SOURCES}
+    )
 
-target_link_libraries(TEST_d2d
-    d2d1
-)
+    target_link_libraries(TEST_d2d
+        d2d1
+    )
+endif()
+
+################################################################################
+
+set(nodevmap_OSX_SOURCES
+    port-osx/osx_main.mm
+    port-osx/osx_message.mm
+    port-osx/quartz/qtz_main.mm
+    )
+
+if(CMAKE_HOST_APPLE)
+    #Xcode project
+    #cd build-xcode
+    #cmake .. -G "Xcode"
+    set(CMAKE_CXX_FLAGS "-std=c++11")
+    find_library(COCOA Cocoa)
+
+    add_executable(TEST_qtz
+        TEST_qtz.cpp
+        ${nodevmap_SOURCES}
+        ${nodevmap_OSX_SOURCES}
+    )
+
+    target_link_libraries(TEST_qtz
+        ${COCOA}
+    )
+endif()
