add nodevmap_core libplist standalone library

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,6 +1,8 @@
-project(nodevmap)
+project(nodevmap_core)
 
-include_directories("./")
+set(CMAKE_CXX_STANDARD 11)
+
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(nodevmap_SOURCES
     base/base_element.cpp
@@ -12,8 +14,8 @@ set(nodevmap_SOURCES
     draw/draw_rect.cpp
     draw/draw_line.cpp
     util/nvp_util.cpp
-    TEST_0.cpp
-    )
+
+)
 
 ################################################################################
 
@@ -21,15 +23,15 @@ set(nodevmap_WIN_SOURCES
     port-win/win_main.cpp
     port-win/win_message.cpp
     port-win/direct2d/d2d_main.cpp
-    )
+)
 
 if(WIN32)
-    add_executable(nodevmap WIN32
+    add_library(nodevmap_core STATIC
         ${nodevmap_SOURCES}
         ${nodevmap_WIN_SOURCES}
     )
 
-    target_link_libraries(nodevmap
+    target_link_libraries(nodevmap_core
         d2d1
         dwrite
     )
@@ -41,21 +43,21 @@ set(nodevmap_OSX_SOURCES
     port-osx/osx_main.mm
     port-osx/osx_message.mm
     port-osx/quartz/qtz_main.mm
-    )
+)
 
 if(CMAKE_HOST_APPLE)
     #Xcode project
     #cd build-xcode
     #cmake .. -G "Xcode"
-    set(CMAKE_CXX_FLAGS "-std=c++11")
+    #set(CMAKE_CXX_FLAGS "-std=c++11")
     find_library(COCOA Cocoa)
 
-    add_executable(nodevmap
+    add_library(nodevmap_core STATIC
         ${nodevmap_SOURCES}
         ${nodevmap_OSX_SOURCES}
     )
 
-    target_link_libraries(nodevmap
+    target_link_libraries(nodevmap_core
         ${COCOA}
     )
 endif()
